osfCommunityPopUpMessage/objects/OSF_Customer_Message__c/OSF_Customer_Message__c.object-meta.xml
<CustomObject>
    <description>This object is used to store customer messages that can be displayed on the community or storefront.</description>
    <label>OSF Customer Message</label>
    <nameField>
        <label>OSF Customer Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OSF Customer Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>