osfCommunityPopUpMessage/objects/OSF_Customer_Message__c/fields/OSF_End_Date__c.field-meta.xml
<CustomField>
    <fullName>OSF_End_Date__c</fullName>
    <defaultValue>TODAY() + 7</defaultValue>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>