osfCommunityPopUpMessage/objects/OSF_Customer_Message__c/fields/OSF_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>OSF_Image_URL__c</fullName>
    <label>Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>