osfCommunityPopUpMessage/objects/OSF_Customer_Message__c/fields/OSF_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>OSF_Is_Active__c</fullName>
    <formula>AND ( OSF_Start_Date__c &lt;= TODAY(), OSF_End_Date__c &gt;= TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>