osfCommunityPopUpMessage/objects/OSF_Customer_Message__c/fields/OSF_Message_Body__c.field-meta.xml
<CustomField>
    <fullName>OSF_Message_Body__c</fullName>
    <label>Message Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>