osfCommunityPopUpMessage/objects/OSF_Customer_Message__c/fields/OSF_Message_Sequence__c.field-meta.xml
<CustomField>
    <fullName>OSF_Message_Sequence__c</fullName>
    <label>Message Sequence</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>