osfCommunityPopUpMessage/objects/OSF_Customer_Message__c/fields/OSF_Message_Title__c.field-meta.xml
<CustomField>
    <fullName>OSF_Message_Title__c</fullName>
    <description>The title of the message</description>
    <inlineHelpText>Titles of messages are optional</inlineHelpText>
    <label>Message Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>