osfCommunityPopUpMessage/objects/OSF_Customer_Message__c/fields/OSF_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>OSF_Start_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>