osfCommunityPopUpMessage/objects/OSF_Customer_Message__c/validationRules/OSF_Is_Active_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>OSF_Is_Active_Validation</fullName>
    <active>true</active>
    <description>Ensures that the end date is always after the start date.</description>
    <errorConditionFormula>OSF_Start_Date__c &gt; OSF_End_Date__c</errorConditionFormula>
    <errorDisplayField>OSF_End_Date__c</errorDisplayField>
    <errorMessage>End Date must be later than Start Date.</errorMessage>
</ValidationRule>